cloudformation/apache-server/stack.json
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "create a private web service that is accessible via a public web cache and exposes a jump box for local ssh access",
    "Parameters": {
        "KeyName": {
            "Type": "AWS::EC2::KeyPair::KeyName",
            "Description": "This key pair must be created ahead of deploying this stack and will allow ssh access to the virtual machines"
        },
        "ImageId": {
            "Type": "AWS::EC2::Image::Id",
            "Default": "ami-0c101f26f147fa7fd"
        },
        "InstanceType": {
            "Type": "String",
            "Default": "t2.micro",
            "AllowedValues": ["t2.micro", "t2.small", "t2.medium", "t3.micro"],
            "Description": "Enter t2.micro, t2.small, t2.medium, or t3.micro. Default is t2.micro."
        }
    },
    "Mappings": {},
    "Resources": {
        "VPC": {
            "Type": "AWS::EC2::VPC",
            "Properties": {
                "CidrBlock": "10.0.0.0/16",
                "EnableDnsHostnames": true,
                "Tags": []
            }
        },

        "IGW": {
            "Type": "AWS::EC2::InternetGateway",
            "Properties": {
                "Tags": []
            }
        },
        "VPCGatewayAttachment": {
            "Type": "AWS::EC2::VPCGatewayAttachment",
            "Properties": {
                "VpcId": { "Ref": "VPC" },
                "InternetGatewayId": { "Ref": "IGW" }
            }
        },

        "Public1a": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "AvailabilityZone": "us-east-1a",
                "VpcId": { "Ref": "VPC" },
                "CidrBlock": "10.0.1.0/24",
                "Tags": []
            }
        },

        "Public1aRouteTable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": { "Ref": "VPC" },
                "Tags": []
            }
        },

        "Public1aRouteTableAssoc": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "SubnetId": { "Ref": "Public1a" },
                "RouteTableId": { "Ref": "Public1aRouteTable" }
            }
        },

        "SSHBastionToInternetRoute": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "RouteTableId": { "Ref": "Public1aRouteTable" },
                "DestinationCidrBlock": "0.0.0.0/0",
                "GatewayId": { "Ref": "IGW" }
            },
            "DependsOn": "VPCGatewayAttachment"
        },

        "Public1aNetworkAcl": {
            "Type": "AWS::EC2::NetworkAcl",
            "Properties": {
                "Tags": [],
                "VpcId": { "Ref": "VPC" }
            }
        },
        "Public1aNetworkAclAssoc": {
            "Type": "AWS::EC2::SubnetNetworkAclAssociation",
            "Properties": {
                "NetworkAclId": { "Ref": "Public1aNetworkAcl" },
                "SubnetId": { "Ref": "Public1a" }
            }
        },

        "AllowInboundSSHFromInternet": {
            "Type": "AWS::EC2::NetworkAclEntry",
            "Metadata": {
                "_comment": "refer to https://en.wikipedia.org/wiki/List_of_IP_protocol_numbers for IP protocol numbers"
            },
            "Properties": {
                "CidrBlock": "0.0.0.0/0",
                "Egress": false,
                "NetworkAclId": { "Ref": "Public1aNetworkAcl" },
                "PortRange": {
                    "From": "22",
                    "To": "22"
                },
                "Protocol": 6,
                "RuleAction": "allow",
                "RuleNumber": 100
            }
        },

        "AllowOutboundTCPToInternet": {
            "Type": "AWS::EC2::NetworkAclEntry",
            "Metadata": {
                "_comment": "the ssh daemon uses ephemeral ports for outbound connections when terminating ssh requests"
            },
            "Properties": {
                "CidrBlock": "0.0.0.0/0",
                "Egress": true,
                "NetworkAclId": { "Ref": "Public1aNetworkAcl" },
                "PortRange": {
                    "From": 1,
                    "To": 65535
                },
                "Protocol": 6,
                "RuleAction": "allow",
                "RuleNumber": 200
            }
        },

        "AllowOutboundSSHToVPC": {
            "Type": "AWS::EC2::NetworkAclEntry",
            "Properties": {
                "CidrBlock": "10.0.0.0/16",
                "Egress": true,
                "NetworkAclId": { "Ref": "Public1aNetworkAcl" },
                "PortRange": {
                    "From": "22",
                    "To": "22"
                },
                "Protocol": 6,
                "RuleAction": "allow",
                "RuleNumber": 100
            }
        },

        "AllowInboundTCPFromVPC": {
            "Type": "AWS::EC2::NetworkAclEntry",
            "Metadata": {
                "_comment": "the ssh daemon uses ephemeral ports for inbound connections when initiating ssh requests"
            },
            "Properties": {
                "CidrBlock": "10.0.0.0/16",
                "Egress": false,
                "NetworkAclId": { "Ref": "Public1aNetworkAcl" },
                "PortRange": {
                    "From": 1,
                    "To": 65535
                },
                "Protocol": 6,
                "RuleAction": "allow",
                "RuleNumber": 200
            }
        },

        "Public1b": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "AvailabilityZone": "us-east-1b",
                "VpcId": { "Ref": "VPC" },
                "CidrBlock": "10.0.2.0/24",
                "Tags": []
            }
        },

        "Public1bRouteTable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": { "Ref": "VPC" },
                "Tags": []
            }
        },
        "Public1bRouteTableAssoc": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "SubnetId": { "Ref": "Public1b" },
                "RouteTableId": { "Ref": "Public1bRouteTable" }
            }
        },
        "WebCacheToInternetRoute": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "RouteTableId": { "Ref": "Public1bRouteTable" },
                "DestinationCidrBlock": "0.0.0.0/0",
                "GatewayId": { "Ref": "IGW" }
            },
            "DependsOn": "VPCGatewayAttachment"
        },

        "Public1bNetworkAcl": {
            "Type": "AWS::EC2::NetworkAcl",
            "Properties": {
                "Tags": [],
                "VpcId": { "Ref": "VPC" }
            }
        },
        "Public1bNetworkAclAssoc": {
            "Type": "AWS::EC2::SubnetNetworkAclAssociation",
            "Properties": {
                "NetworkAclId": { "Ref": "Public1bNetworkAcl" },
                "SubnetId": { "Ref": "Public1b" }
            }
        },

        "AllowInboundSSHFromVPC": {
            "Type": "AWS::EC2::NetworkAclEntry",
            "Properties": {
                "CidrBlock": "10.0.0.0/16",
                "Egress": false,
                "NetworkAclId": { "Ref": "Public1bNetworkAcl" },
                "PortRange": {
                    "From": "22",
                    "To": "22"
                },
                "Protocol": 6,
                "RuleAction": "allow",
                "RuleNumber": 100
            }
        },

        "AllowOutboundSSHToVPCOnEphemeral": {
            "Type": "AWS::EC2::NetworkAclEntry",
            "Properties": {
                "CidrBlock": "10.0.0.0/16",
                "Egress": true,
                "NetworkAclId": { "Ref": "Public1bNetworkAcl" },
                "PortRange": {
                    "From": 1,
                    "To": 65535
                },
                "Protocol": 6,
                "RuleAction": "allow",
                "RuleNumber": 100
            }
        },

        "AllowInboundHTTPFromInternet": {
            "Type": "AWS::EC2::NetworkAclEntry",
            "Properties": {
                "CidrBlock": "0.0.0.0/0",
                "Egress": false,
                "NetworkAclId": { "Ref": "Public1bNetworkAcl" },
                "PortRange": {
                    "From": "80",
                    "To": "80"
                },
                "Protocol": 6,
                "RuleAction": "allow",
                "RuleNumber": 200
            }
        },

        "AllowOutboundHTTPToInternet": {
            "Type": "AWS::EC2::NetworkAclEntry",
            "Metadata": {
                "_comment": "the http server uses ephemeral ports for outbound connections when terminating http requests"
            },
            "Properties": {
                "CidrBlock": "0.0.0.0/0",
                "Egress": true,
                "NetworkAclId": { "Ref": "Public1bNetworkAcl" },
                "PortRange": {
                    "From": 1,
                    "To": 65535
                },
                "Protocol": 6,
                "RuleAction": "allow",
                "RuleNumber": 200
            }
        },

        "AllowOutboundHTTPToVPC": {
            "Type": "AWS::EC2::NetworkAclEntry",
            "Properties": {
                "CidrBlock": "10.0.0.0/16",
                "Egress": true,
                "NetworkAclId": { "Ref": "Public1bNetworkAcl" },
                "PortRange": {
                    "From": "80",
                    "To": "80"
                },
                "Protocol": 6,
                "RuleAction": "allow",
                "RuleNumber": 300
            }
        },

        "AllowInboundHTTPFromVPC": {
            "Type": "AWS::EC2::NetworkAclEntry",
            "Metadata": {
                "_comment": "the web server uses ephemeral ports for inbound connections when initiating http requests"
            },
            "Properties": {
                "CidrBlock": "10.0.0.0/16",
                "Egress": false,
                "NetworkAclId": { "Ref": "Public1bNetworkAcl" },
                "PortRange": {
                    "From": 1,
                    "To": 65535
                },
                "Protocol": 6,
                "RuleAction": "allow",
                "RuleNumber": 300
            }
        },

        "Private1b": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "AvailabilityZone": "us-east-1b",
                "VpcId": { "Ref": "VPC" },
                "CidrBlock": "10.0.3.0/24",
                "Tags": []
            }
        },

        "Private1bRouteTable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": { "Ref": "VPC" },
                "Tags": []
            }
        },
        "Private1bRouteTableAssoc": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "SubnetId": { "Ref": "Private1b" },
                "RouteTableId": { "Ref": "Private1bRouteTable" }
            }
        },

        "SecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "My security group",
                "VpcId": { "Ref": "VPC" }
            }
        },
        "SecurityGroupIngress": {
            "Type": "AWS::EC2::SecurityGroupIngress",
            "Properties": {
                "IpProtocol": -1,
                "CidrIp": "0.0.0.0/0",
                "GroupId": { "Ref": "SecurityGroup" }
            }
        },
        "SecurityGroupEgress": {
            "Type": "AWS::EC2::SecurityGroupEgress",
            "Properties": {
                "IpProtocol": -1,
                "CidrIp": "0.0.0.0/0",
                "GroupId": { "Ref": "SecurityGroup" }
            }
        },

        "BastionHost": {
            "Type": "AWS::EC2::Instance",
            "Properties": {
                "KeyName": { "Ref": "KeyName" },
                "ImageId": { "Ref": "ImageId" },
                "InstanceType": { "Ref": "InstanceType" },
                "NetworkInterfaces": [
                    {
                        "AssociatePublicIpAddress": true,
                        "DeleteOnTermination": true,
                        "SubnetId": { "Ref": "Public1a" },
                        "DeviceIndex": 0,
                        "GroupSet": [{ "Ref": "SecurityGroup" }]
                    }
                ],
                "Tags": []
            }
        },

        "WebCache": {
            "Type": "AWS::EC2::Instance",
            "Properties": {
                "ImageId": { "Ref": "ImageId" },
                "InstanceType": { "Ref": "InstanceType" },
                "KeyName": { "Ref": "KeyName" },
                "NetworkInterfaces": [
                    {
                        "AssociatePublicIpAddress": "true",
                        "DeleteOnTermination": "true",
                        "SubnetId": { "Ref": "Public1b" },
                        "DeviceIndex": 0,
                        "GroupSet": [{ "Ref": "SecurityGroup" }]
                    }
                ],
                "UserData": {
                    "Fn::Base64": {
                        "Fn::Join": [
                            "",
                            [
                                "#!/bin/bash -ex\n",
                                "yum -y install varnish-3.0.7\n",
                                "cat > /etc/varnish/default.vcl << EOF\n",
                                "backend default {\n",
                                "  .host = \"",
                                { "Fn::GetAtt": ["WebServer", "PrivateIp"] },
                                "\";\n",
                                "  .port = \"80\";\n",
                                "}\n",
                                "EOF\n",
                                "sed -i.bak \"s/^VARNISH_LISTEN_PORT=.*/VARNISH_LISTEN_PORT=80/\" /etc/sysconfig/varnish\n",
                                "service varnish start\n",
                                "/opt/aws/bin/cfn-signal --stack ",
                                { "Ref": "AWS::StackName" },
                                " --resource WebCache --region ",
                                { "Ref": "AWS::Region" },
                                "\n"
                            ]
                        ]
                    }
                }
            },
            "CreationPolicy": {
                "ResourceSignal": {
                    "Timeout": "PT5M"
                }
            },
            "DependsOn": "NATServer"
        },

        "WebServer": {
            "Type": "AWS::EC2::Instance",
            "Properties": {
                "KeyName": { "Ref": "KeyName" },
                "ImageId": { "Ref": "ImageId" },
                "InstanceType": { "Ref": "InstanceType" },
                "NetworkInterfaces": [
                    {
                        "AssociatePublicIpAddress": "false",
                        "DeleteOnTermination": "true",
                        "SubnetId": { "Ref": "Private1b" },
                        "DeviceIndex": 0,
                        "GroupSet": [{ "Ref": "SecurityGroup" }]
                    }
                ],
                "Tags": [],
                "UserData": {
                    "Fn::Base64": {
                        "Fn::Join": [
                            "",
                            ["#!/bin/bash -ex\n", "yum -y install httpd24-2.4.12\n", "service httpd start\n"]
                        ]
                    }
                }
            }
        },

        "NATSubnet": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "AvailabilityZone": "us-east-1b",
                "VpcId": { "Ref": "VPC" },
                "CidrBlock": "10.0.0.0/24",
                "Tags": []
            }
        },

        "NATSubnetRouteTable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": { "Ref": "VPC" },
                "Tags": []
            }
        },

        "NATSubnetRouteTableAssoc": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "SubnetId": { "Ref": "NATSubnet" },
                "RouteTableId": { "Ref": "NATSubnetRouteTable" }
            }
        },

        "NATToInternetRoute": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "RouteTableId": { "Ref": "NATSubnetRouteTable" },
                "DestinationCidrBlock": "0.0.0.0/0",
                "GatewayId": { "Ref": "IGW" }
            }
        },

        "NATServer": {
            "Type": "AWS::EC2::Instance",
            "Metadata": {
                "_comment": "Created our own NAT AMI's, refer to https://docs.aws.amazon.com/vpc/latest/userguide/VPC_NAT_Instance.html#create-nat-ami"
            },
            "Properties": {
                "KeyName": { "Ref": "KeyName" },
                "ImageId": "ami-07436eb13161cfb1c",
                "InstanceType": { "Ref": "InstanceType" },
                "Tags": [],
                "NetworkInterfaces": [
                    {
                        "AssociatePublicIpAddress": "true",
                        "DeleteOnTermination": "true",
                        "SubnetId": { "Ref": "NATSubnet" },
                        "DeviceIndex": "0",
                        "GroupSet": [{ "Ref": "SecurityGroup" }]
                    }
                ],
                "SourceDestCheck": "false"
            },
            "DependsOn": "VPCGatewayAttachment"
        },

        "WebServerToNATRoute": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "RouteTableId": { "Ref": "Private1bRouteTable" },
                "DestinationCidrBlock": "0.0.0.0/0",
                "InstanceId": { "Ref": "NATServer" }
            },
            "DependsOn": "NATServer"
        }
    },
    "Outputs": {
        "BastionHostPublicName": {
            "Value": { "Fn::GetAtt": ["BastionHost", "PublicDnsName"] },
            "Description": "connect via SSH as user ec2-user"
        },
        "WebCachePublicName": {
            "Value": { "Fn::GetAtt": ["WebCache", "PublicDnsName"] },
            "Description": "handle HTTP requests"
        },
        "WebCachePrivateIp": {
            "Value": { "Fn::GetAtt": ["WebCache", "PrivateIp"] },
            "Description": "connect via SSH from bastion host"
        },
        "WebServerPrivateIp": {
            "Value": { "Fn::GetAtt": ["WebServer", "PrivateIp"] },
            "Description": "connect via SSH from bastion host"
        }
    }
}
